--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^4.2.0
   cloud_firestore: ^6.0.3
   firebase_auth: ^6.1.1
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
