--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^6.0.3
   firebase_auth: ^6.1.1
   random_string: ^2.3.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
